<resources>
    <string name="app_name">Pocket Movie App</string>
    <string name="action_settings">Settings</string>

    <string name="movie_name">Name</string>
    <string name="movie_popularity">Popularity</string>
    <string name="movie_vote_count">Vote</string>
    <string name="movie_adult">Adult</string>
    <string name="movie_original_language">Original Language</string>
    <string name="movie_vote_average">Vote Average</string>
    <string name="movie_overview">Overview</string>
    <string name="movie_release_date">Release Date</string>


    <string name="pref_sort_order_label">SELECT</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Top Rated</string>
    <string name="trailer">Trailer</string>

    <string name="favorite" translatable="false">Favorite Movies</string>


    <string name="edit_text_string">edit_text_string</string>
    <string name="find">Find</string>

    <string name="search">search</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
</resources>
