<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.github.ivbaranov.mfb.MaterialFavoriteButton
        android:id="@+id/favorite_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#cc0000"
        app:layout_constraintBottom_toTopOf="@+id/moviename"
        app:layout_constraintLeft_toRightOf="@+id/moviename"
        app:layout_constraintRight_toLeftOf="@+id/moviename"
        app:layout_constraintTop_toBottomOf="@+id/moviename"
        app:mfb_color="white"
        app:mfb_type="heart" />

    <TextView
        android:id="@+id/moviename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="10dp"
        android:text="@string/movie_name"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moviename"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/moviepopularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/movie_popularity"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moviepopularity"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/MovieVote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popularity"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/movie_vote_count"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/vote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MovieVote"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/movieadult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vote"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/movie_adult"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/adult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movieadult"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/movieoriginallanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adult"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/movie_original_language"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/originallanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movieoriginallanguage"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/movievoteaverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/originallanguage"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/movie_vote_average"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/voteaverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movievoteaverage"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/movieoverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/voteaverage"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/movie_overview"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movieoverview"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/moviereleasedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overview"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/movie_release_date"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/releasedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moviereleasedate"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:padding="@dimen/padding_layout"
        android:textSize="20sp" />

</RelativeLayout>